--- a/public/index.html
+++ b/public/index.html
@@ -1,70 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vendor Assistant</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mandi Vendor Assistant</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="container">
-        <header>
-            <h1>🗣️ Vendor Assistant</h1>
-            <p>Voice-first communication & price helper</p>
-        </header>
 
-        <div class="language-selector">
-            <label>Your Language:</label>
-            <select id="sourceLang">
-                <option value="hi">हिंदी (Hindi)</option>
-                <option value="en">English</option>
-                <option value="ta">தமிழ் (Tamil)</option>
-            </select>
-            
-            <label>Reply in:</label>
-            <select id="targetLang">
-                <option value="en">English</option>
-                <option value="hi">हिंदी (Hindi)</option>
-                <option value="ta">தமிழ் (Tamil)</option>
-            </select>
-        </div>
+<body class="home-body">
 
-        <div class="chat-container">
-            <div id="chatDisplay" class="chat-display">
-                <div class="welcome-message">
-                    <p>👋 Welcome! Ask for prices or chat in any language.</p>
-                    <p>Try: "Aaj aloo ka rate kya hai?" or "What's the price of onions?"</p>
-                </div>
-            </div>
-        </div>
+  <!-- HERO SECTION -->
+  <div class="home-container">
 
-        <div class="input-section">
-            <div class="voice-controls">
-                <button id="micBtn" class="mic-btn">
-                    <span class="mic-icon">🎤</span>
-                    <span class="mic-text">Tap to Speak</span>
-                </button>
-                <div id="listeningIndicator" class="listening-indicator hidden">
-                    <div class="pulse"></div>
-                    <span>Listening...</span>
-                </div>
-            </div>
-            
-            <div class="text-input">
-                <input type="text" id="textInput" placeholder="Or type your message...">
-                <button id="sendBtn">Send</button>
-            </div>
-        </div>
+    <h1 class="home-title">🌾 Mandi Vendor Assistant</h1>
+    <p class="home-subtitle">
+      Smart AI-powered support for Indian street vendors & farmers
+    </p>
 
-        <div class="quick-examples">
-            <h3>Quick Examples:</h3>
-            <button class="example-btn" data-text="Aaj aloo ka rate kya hai?">🥔 Potato price</button>
-            <button class="example-btn" data-text="Pyaz kitne ka hai?">🧅 Onion price</button>
-            <button class="example-btn" data-text="Namaste, kaise hain aap?">👋 Greeting</button>
-        </div>
-    </div>
+    <!-- FEATURE BUTTONS -->
+    <div class="feature-grid">
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="script.js"></script>
+  <!-- Row 1 -->
+  <a href="dashboard.html" class="feature-card">
+    💬 Vendor Chat Assistant
+    <span>Ask mandi prices in any language</span>
+  </a>
+
+  <a href="prices.html" class="feature-card">
+    📊 Live Mandi Dashboard
+    <span>View today’s rates instantly</span>
+  </a>
+
+  <a href="calculator.html" class="feature-card">
+    🧾 Cost Calculator
+    <span>Calculate total cost for quantity</span>
+  </a>
+
+</div>
+
+<!-- Row 2 -->
+<div class="feature-grid feature-grid-2">
+
+  <a href="trends.html" class="feature-card">
+    📈 Price Trends (Demo)
+    <span>See increasing/decreasing rates</span>
+  </a>
+
+  <a href="profit.html" class="feature-card">
+    💰 Profit Estimator
+    <span>See the profit you earned</span>
+  </a>
+
+</div>
+
+
+
+    <p class="footer-text">
+      Built for AIforBharat Hackathon 🚀
+    </p>
+
+  </div>
+
 </body>
 </html>
