--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,116 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vendor Assistant</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Vendor Assistant Dashboard</title>
+
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
 
-  <!-- ✅ DASHBOARD WRAPPER -->
-  <div class="dashboard">
+<body class="home-body">
 
-    <!-- ✅ LEFT PANEL: Price Dashboard -->
-    <div class="panel left">
-      <h2>📍 Today’s Mandi Rates</h2>
+  <div class="dashboard-layout">
 
-      <ul class="price-list">
-        <li>🥔 आलू — ₹25/kg</li>
-        <li>🧅 प्याज — ₹20/kg</li>
-        <li>🍅 टमाटर — ₹32/kg</li>
-        <li>🌾 चावल — ₹48/kg</li>
-        <li>🥣 दाल — ₹85/kg</li>
-      </ul>
+    <!-- ================================= -->
+    <!-- LEFT PANEL: LIVE GOVT PRICES       -->
+    <!-- ================================= -->
+    <div class="side-panel left-panel">
+      <h2>📍 Today's Live Mandi Rates</h2>
+      <p class="small-note">Fetched from Govt API (data.gov.in)</p>
 
-      <p class="note">Updated daily (demo data)</p>
+      <div id="liveRates" class="rates-box">
+        <p>Loading live mandi prices...</p>
+      </div>
+
+      <p class="small-footer">
+        Data Source: Government of India (data.gov.in)
+      </p>
     </div>
 
-    <!-- ✅ CENTER PANEL: Chat Assistant -->
-    <div class="panel center">
-      <header>
-        <h1>🗣️ Vendor Assistant</h1>
-        <p>Voice-first communication & price helper</p>
+    <!-- ================================= -->
+    <!-- CENTER PANEL: CHATBOT             -->
+    <!-- ================================= -->
+    <div class="main-panel">
+
+      <header class="chat-header">
+        <h1>🗣 Vendor Assistant</h1>
+        <p>Voice-first communication & mandi price helper</p>
       </header>
 
-      <!-- Language Selector -->
+      <!-- Language Select -->
       <div class="language-selector">
         <label>Your Language:</label>
         <select id="sourceLang">
-          <option value="hi">हिंदी (Hindi)</option>
+          <option value="hi">Hindi</option>
           <option value="en">English</option>
-          <option value="ta">தமிழ் (Tamil)</option>
+          <option value="ta">Tamil</option>
         </select>
 
         <label>Reply in:</label>
         <select id="targetLang">
           <option value="en">English</option>
-          <option value="hi">हिंदी (Hindi)</option>
-          <option value="ta">தமிழ் (Tamil)</option>
+          <option value="hi">Hindi</option>
+          <option value="ta">Tamil</option>
         </select>
       </div>
-      <label style="margin-left:15px;">
-        🔊 Voice Reply
-        <input type="checkbox" id="voiceToggle" checked />
-      </label>
 
       <!-- Chat Display -->
       <div class="chat-container">
         <div id="chatDisplay" class="chat-display">
           <div class="welcome-message">
-            <p>👋 Welcome! Ask for mandi prices or calculate cost.</p>
-            <p>Try: "2 kilo pyaz kitna hoga?"</p>
+            👋 Welcome Vendor! Ask: <br>
+            "Aloo ka rate kya hai?" or "2 kilo pyaz ka total?"
           </div>
         </div>
       </div>
-      <button class="download-btn" onclick="downloadChat()">
-        ⬇ Download Chat History
-      </button>
 
-      <!-- Input Section -->
-      <div class="input-section">
-        <div class="voice-controls">
-          <button id="micBtn" class="mic-btn">
-            <span class="mic-icon">🎤</span>
-            <span class="mic-text">Tap to Speak</span>
-          </button>
+      <!-- Voice Button -->
+      <div class="voice-controls">
+        <button id="micBtn" class="mic-btn">
+          🎤 <span class="mic-text">Tap to Speak</span>
+        </button>
 
-          <div id="listeningIndicator" class="listening-indicator hidden">
-            <div class="pulse"></div>
-            <span>Listening...</span>
-          </div>
-        </div>
-
-        <div class="text-input">
-          <input type="text" id="textInput" placeholder="Type your message..." />
-          <button id="sendBtn">Send</button>
+        <div id="listeningIndicator" class="listening-indicator hidden">
+          <span>Listening...</span>
         </div>
       </div>
+
+      <!-- Text Input -->
+      <div class="text-input">
+        <input type="text" id="textInput" placeholder="Type message..." />
+        <button id="sendBtn">Send</button>
+      </div>
+
     </div>
 
-    <!-- ✅ RIGHT PANEL: Smart Tools -->
-    <div class="panel right">
-      <h2>🧾 Smart Tools</h2>
+    <!-- ================================= -->
+    <!-- RIGHT PANEL: SMART TOOLS          -->
+    <!-- ================================= -->
+    <div class="side-panel right-panel">
+      <h2>📌 Smart Tools</h2>
 
-      <div class="tool-box">
-        <p>✅ Price Query</p>
-        <p>✅ Quantity Cost Calculator</p>
-        <p>✅ Multilingual Support</p>
-        <p>✅ Voice Assistant</p>
+      <ul class="tools-list">
+        <li>✅ Price Query</li>
+        <li>✅ Quantity Calculator</li>
+        <li>✅ Govt Live API Prices</li>
+        <li>✅ Voice Assistant</li>
+      </ul>
+
+      <h3>Quick Actions</h3>
+
+      <div class="quick-actions">
+        <button class="example-btn" data-text="Aloo ka rate kya hai?">🥔 Potato</button>
+        <button class="example-btn" data-text="2 kilo pyaz ka total?">🧅 Total Cost</button>
+        <button class="example-btn" data-text="Namaste">👋 Greeting</button>
       </div>
 
-      <h3>Quick Examples</h3>
-      <button class="example-btn" data-text="Aaj aloo ka rate kya hai?">🥔 Potato</button>
-      <button class="example-btn" data-text="2 kilo pyaz kitna hoga?">🧅 Total Cost</button>
-      <button class="example-btn" data-text="Namaste!">👋 Greeting</button>
+      <a href="index.html" class="back-btn">⬅ Back Home</a>
     </div>
 
   </div>
 
-  <!-- Scripts -->
+  <!-- ================================= -->
+  <!-- SOCKET.IO -->
+  <!-- ================================= -->
   <script src="/socket.io/socket.io.js"></script>
+
+  <!-- ================================= -->
+  <!-- LIVE PRICE FETCH ONLY -->
+  <!-- ================================= -->
+  <script>
+    async function loadLivePrices() {
+      const box = document.getElementById("liveRates");
+
+      try {
+        const res = await fetch("/live-prices");
+        const data = await res.json();
+
+        box.innerHTML = "";
+
+        data.slice(0, 5).forEach(item => {
+          const div = document.createElement("div");
+          div.className = "rate-card";
+
+          div.innerHTML = `
+            <h3>${item.commodity}</h3>
+            <p><b>₹${item.modal_price}</b> / quintal</p>
+            <small>${item.market}, ${item.state}</small>
+          `;
+
+          box.appendChild(div);
+        });
+
+      } catch (err) {
+        box.innerHTML = "<p>❌ Unable to load mandi prices.</p>";
+      }
+    }
+
+    loadLivePrices();
+  </script>
+
+  <!-- ================================= -->
+  <!-- MAIN CHATBOT SCRIPT -->
+  <!-- ================================= -->
   <script src="script.js"></script>
 
 </body>
-
 </html>
